can put more stuff in sec belts

--- a/Resources/Prototypes/Entities/Objects/Weapons/Throwable/clusterbang.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Throwable/clusterbang.yml
@@ -48,6 +48,9 @@
   - type: ContainerContainer
     containers:
       cluster-payload: !type:Container
+  - type: Tag
+    tags:
+    - SecBeltEquip
 
 - type: entity
   parent: [GrenadeBase, BaseSyndicateContraband]
