--- a/Resources/Prototypes/Entities/Objects/Misc/books.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/books.yml
@@ -345,6 +345,9 @@
   - type: GuideHelp
     guides:
     - SpaceLaw
+  - type: Tag
+    tags:
+    - SecBeltEquip
 
 - type: entity
   parent: BookBase
